Tried documenting using swagger
